src/MiniJava/Tests/DriverTests/parse_errors/unknown_characters.mj
class MissingSemicolon
{
    public static void main()
    {
         int f$#uc@k;
         $$@$@$@$@$@$@@$@$@$@$@~~~~~~~~
         System.out.println(-1);
    }
}